--- a/pages/graficas.html
+++ b/pages/graficas.html
@@ -49,7 +49,7 @@
         <section class=" bg-primary pt-5 pb-4 container-fluid"  id="proyectos">
             <h1 class="text-center h3 mb-3 text-white">Historias que no fueron tapa</h1>
             <div class="row justify-content-around mt-2">
-                <div class="card" style="width: 18rem;">
+                <div class="card margin-mobile" style="width: 18rem;">
                     <img src="../assets/img/historias/tapadeaguscard.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">tapa de Agus </h5>
@@ -57,7 +57,7 @@
                         <a href="../assets/img/historias/tapadeagus.jpg" class="btn btn-primary" target="_blank">Ver tapa</a>
                       </div>
                   </div>
-                  <div class="card" style="width: 18rem;">
+                  <div class="card margin-mobile" style="width: 18rem;">
                     <img src="../assets/img/historias/tapadebrendacard.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">tapa de Brenda  </h5>
@@ -65,7 +65,7 @@
                 <a href="../assets/img/historias/tapadebrenda.jpg" class="btn btn-primary" target="_blank">Ver tapa</a>
           </div>
                   </div>
-                  <div class="card" style="width: 18rem;">
+                  <div class="card margin-mobile" style="width: 18rem;">
                     <img src="../assets/img/historias/tapadelautycard.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">tapa de Lauty </h5>
@@ -75,7 +75,7 @@
                   </div>
             </div>
             <div class="row justify-content-around mt-2">
-                <div class="card" style="width: 18rem;">
+                <div class="card margin-mobile" style="width: 18rem;">
                     <img src="../assets/img/historias/tapadevickycard.jpg"  class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">tapa de Vicky </h5>
@@ -83,7 +83,7 @@
                    <a href="../assets/img/historias/tapadevicky.jpg" class="btn btn-primary" target="_blank">Ver tapa</a>
                 </div>
                   </div>
-                  <div class="card" style="width: 18rem;">
+                  <div class="card margin-mobile" style="width: 18rem;">
                     <img src="../assets/img/historias/tapaderociocard.jpg"  class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">tapa de Rocio </h5>
@@ -91,7 +91,7 @@
                         <a href="../assets/img/historias/tapaderocio.jpg" class="btn btn-primary" target="_blank">Ver tapa</a>
                     </div>
                   </div>
-                  <div class="card" style="width: 18rem;">
+                  <div class="card margin-mobile" style="width: 18rem;">
                     <img src="../assets/img/historias/tapakevincard.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">tapa de Kevin </h5>
@@ -101,7 +101,7 @@
                   </div>
             </div>
             <div class="row justify-content-around mt-2">
-                <div class="card" style="width: 18rem;">
+                <div class="card margin-mobile" style="width: 18rem;">
                     <img src="../assets/img/historias/tapadecamicard.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">tapa de Cami </h5>
@@ -109,7 +109,7 @@
                         <a href="../assets/img/historias/tapadecami.jpg" class="btn btn-primary" target="_blank">Ver tapa</a>
                 </div>
                   </div>
-                  <div class="card" style="width: 18rem;">
+                  <div class="card margin-mobile" style="width: 18rem;">
                     <img src="../assets/img/historias/tapademelodycard.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">tapa de Melody </h5>
@@ -117,7 +117,7 @@
                         <a href="../assets/img/historias/tapademelody.jpg" class="btn btn-primary" target="_blank">Ver tapa</a>
                 </div>
                   </div>
-                  <div class="card" style="width: 18rem;">
+                  <div class="card margin-mobile" style="width: 18rem;">
                     <img src="../assets/img/historias/tapadevalencard.jpg"  class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">tapa de Valen </h5>
@@ -127,7 +127,7 @@
                   </div>
             </div>
             <div class="row justify-content-around mt-2">
-                <div class="card" style="width: 18rem;">
+                <div class="card margin-mobile" style="width: 18rem;">
                     <img src="../assets/img/historias/tapadealecard.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">tapa de alejandro</h5>
@@ -135,7 +135,7 @@
                         <a href="../assets/img/historias/tapadeale.jpg" class="btn btn-primary" target="_blank">Ver tapa</a>                    
                 </div>
                   </div>
-                  <div class="card" style="width: 18rem;">
+                  <div class="card margin-mobile" style="width: 18rem;">
                     <img src="../assets/img/historias/tapadesofia.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">tapa de Sofia </h5>
@@ -182,7 +182,8 @@
         <!-- Footer-->
         <footer class="bg-light py-5">
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2022 - Realizado por el departamento de comunicación y los alumnos de 6to 2°<div></div>
-        </footer>
+            <img src="../assets/img/logo.jpg" width="25%" alt="">
+          </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- SimpleLightbox plugin JS-->
