--- a/pages/mapeos.html
+++ b/pages/mapeos.html
@@ -57,7 +57,7 @@
                   </h2>
                   <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
-                        <a href="https://docs.google.com/document/d/1vgp91fiWgq2I0TLaBZ0_KJR4XAuE2-oC/edit"> Link al informe</a>
+                        <a href="https://docs.google.com/document/d/1vgp91fiWgq2I0TLaBZ0_KJR4XAuE2-oC/edit" target="_blank" > Link al informe</a>
                         </div>
                   </div>
                 </div>
@@ -70,7 +70,7 @@
                   <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
 
                     <div class="accordion-body"><iframe width="100%" height="315" src="https://www.youtube.com/embed/leBh731r7Uw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-                    <a class="m-5 mt-5" href="https://docs.google.com/document/d/1-s6cQ2Cu4rz_be2E27LEEwuLO9IDwq_g/edit?usp=drive_web&ouid=110840851475603186278&rtpof=true"> Link al informe</a>
+                    <a class="m-5 mt-5" href="https://docs.google.com/document/d/1-s6cQ2Cu4rz_be2E27LEEwuLO9IDwq_g/edit?usp=drive_web&ouid=110840851475603186278&rtpof=true" target="_blank" > Link al informe</a>
                   </div>
                 </div>
                 <div class="accordion-item">
@@ -80,7 +80,7 @@
                       </button>
                     </h2>
                     <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body"> <a href="https://docs.google.com/document/d/1B2qj9RQqzyLy389V0P7JW4LxDwNP9F1U/edit"> Link al informe</a></div>
+                      <div class="accordion-body"> <a href="https://docs.google.com/document/d/1B2qj9RQqzyLy389V0P7JW4LxDwNP9F1U/edit" target="_blank" > Link al informe</a></div>
                     </div>
                   </div>
                   <div class="accordion-item">
@@ -90,7 +90,7 @@
                       </button>
                     </h2>
                     <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-collapseFour" data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body"> <a href="https://docs.google.com/document/d/1nOQgywLLZpYwIvznUy1iLt_OTmzTz20_/edit"> Link al informe</a></div>
+                      <div class="accordion-body"> <a href="https://docs.google.com/document/d/1nOQgywLLZpYwIvznUy1iLt_OTmzTz20_/edit" target="_blank" > Link al informe</a></div>
                     </div>
                   </div>
                 </div>
@@ -102,6 +102,7 @@
         <!-- Footer-->
         <footer class="bg-light py-5">
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2022 - Realizado por el departamento de comunicación y los alumnos de 6to 2°<div></div>
+            <img src="../assets/img/logo.jpg" width="25%" alt="">
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
