--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mb-4">¡Visitá el Instagram de nuestra escuela!</h2>
                 <a class="" href="https://www.instagram.com/secu53palomar/" target="_blank"><i class="bi bi-instagram fs-2 mx-3"></i></a>
+               
             </div>
         </section>
         <!-- Contact-->
@@ -221,6 +222,7 @@
         <!-- Footer-->
         <footer class="bg-light py-5">
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2022 - Realizado por el departamento de comunicación y los alumnos de 6to 2°<div></div>
+            <img src="./assets/img/logo.jpg" width="25%" alt="">
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
