--- a/pages/historiafotos.html
+++ b/pages/historiafotos.html
@@ -58,6 +58,7 @@
         <!-- Footer-->
         <footer class="bg-light py-5">
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2022 - Realizado por el departamento de comunicación y los alumnos de 6to 2°<div></div>
+            <img src="../assets/img/logo.jpg" width="25%" alt="">
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
