--- a/pages/spot.html
+++ b/pages/spot.html
@@ -47,7 +47,7 @@
         <!-- Portfolio-->
         <section class=" bg-primary pt-5 pb-4"  id="proyectos">
             <div class="row justify-content-around">
-                <div class="card" style="width: 18rem;">
+                <div class="card margin-mobile" style="width: 18rem;">
                     <img src="../assets/img/spot/spot1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Spot 1</h5>
@@ -55,7 +55,7 @@
                       <a href="https://soundcloud.com/ayelen-campot/whatsapp-audio-2022-11-02-at-174304?si=a84c4956529943d099cf6e8b7ba2ed0a&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank"  class="btn btn-primary">Escuchar</a>
                     </div>
                   </div>
-                  <div class="card" style="width: 18rem;">
+                  <div class="card margin-mobile" style="width: 18rem;">
                     <img src="../assets/img/spot/spot2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Spot 2 y 3</h5>
@@ -64,7 +64,7 @@
                       <a href="https://soundcloud.com/ayelen-campot/whatsapp-audio-2022-11-02-at-174034?si=29d65a59ef1c40518bf86d3be717ea8c&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank"  class="btn btn-primary">Escuchar</a>
                     </div>
                   </div>
-                  <div class="card" style="width: 18rem;">
+                  <div class="card margin-mobile" style="width: 18rem;">
                     <img src="../assets/img/spot/spot3.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Spot 4 </h5>
@@ -75,7 +75,7 @@
           
             </div>
             <div class="row justify-content-around mt-3">
-              <div class="card" style="width: 18rem;">
+              <div class="card margin-mobile" style="width: 18rem;">
                 <img src="../assets/img/spot/spot4.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Spot 5 </h5>
@@ -83,7 +83,7 @@
                   <a href="https://soundcloud.com/ayelen-campot/whatsapp-audio-2022-11-02-at-174303?si=396d032a8d1a40b6b3143e01a05f0357&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank"  class="btn btn-primary">Escuchar</a>
                 </div>
               </div>
-              <div class="card" style="width: 18rem;">
+              <div class="card margin-mobile" style="width: 18rem;">
                 <img src="../assets/img/spot/spot5.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Spot 6 </h5>
@@ -91,7 +91,7 @@
                   <a href="https://soundcloud.com/ayelen-campot/whatsapp-audio-2022-11-07-at-131314?si=e7bd7921145f453f844e281d86141610&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank" class="btn btn-primary">Escuchar</a>
                 </div>
               </div>
-              <div class="card" style="width: 18rem;">
+              <div class="card margin-mobile" style="width: 18rem;">
                 <img src="../assets/img/spot/spot6.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Spot 7 </h5>
@@ -106,7 +106,8 @@
         <!-- Footer-->
         <footer class="bg-light py-5">
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2022 - Realizado por el departamento de comunicación y los alumnos de 6to 2°<div></div>
-        </footer>
+            <img src="../assets/img/logo.jpg" width="25%" alt="">
+          </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- SimpleLightbox plugin JS-->
