cambio del footer

--- a/pages/proyectopodcast.html
+++ b/pages/proyectopodcast.html
@@ -109,7 +109,7 @@
         
 
         <!-- Footer-->
-        <footer class="bg-light py-5">
+        <footer class="bg-white py-5">
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2022 - Realizado por el departamento de comunicación y los alumnos de 6to 2°<div></div>
             <img src="../assets/img/logo.jpg" width="25%" alt="">
           </footer>
