--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                         <a class="portfolio-box" href="pages/proyectopodcast.html" title="Project Name">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/infromesdebandas.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">lenguaje radial</div>
-                                <div class="project-name">informes de bandas</div>
+                                <div class="project-category text-white-50">Lenguaje radial</div>
+                                <div class="project-name">Informes de bandas</div>
                             </div>
                         </a>
                     </div>
@@ -127,8 +127,8 @@
                         <a class="portfolio-box" href="pages/spot.html" title="Project Name">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/donaciondesangre.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">lenguaje radial</div>
-                                <div class="project-name">spots donación de sangre</div>
+                                <div class="project-category text-white-50">Lenguaje radial</div>
+                                <div class="project-name">Spots donación de sangre</div>
                             </div>
                         </a>
                     </div>
@@ -145,8 +145,8 @@
                         <a class="portfolio-box" href="pages/storytelling.html" title="Project Name">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/sigloxxi.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">storytelling- inmigraciones</div>
-                                <div class="project-name">transformación siglo XXI </div>
+                                <div class="project-category text-white-50">Storytelling- inmigraciones</div>
+                                <div class="project-name">Transformación siglo XXI </div>
                             </div>
                         </a>
                     </div>
