subo trabajos de mario

--- a/pages/consumo.html
+++ b/pages/consumo.html
@@ -86,13 +86,30 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen
       ></iframe>
-      <h3 class="mt-3 mb-3 text-white">Lucas Carrizo</h3>
-      <div class="card">
+      <h3 class="mt-3 mb-3 text-white">Realizado por Villacorta</h3>
+      <iframe width="100%" height="315" src="https://www.youtube.com/embed/AWoXL9GI4BU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <h3 class="mt-3 mb-3 text-white">Supzeszyn, Cajal y Camargo</h3>
+      <iframe width="100%" height="315" src="https://www.youtube.com/embed/lZQN9XJQSNM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <div class="card margin-mobile">
         <div class="card-body">
           <h5 class="card-title">Comunicación y culturas del consumo</h5>
           <p class="card-text">¿Qué son los medios de comunicación?</p>
+          <p class="card-text">Lucas Carrizo</p>
           <a
             href="../assets/img/quinto/consumo.pdf"
+            target="_blank"
+            class="btn btn-primary"
+            >Ver trabajo</a
+          >
+        </div>
+      </div>
+      <div class="card margin-mobile">
+        <div class="card-body">
+          <h5 class="card-title">Comunicación, cultura y sociedad</h5>
+          <p class="card-text">Obsolescencia programada.</p>
+          <p class="card-text">Leiva, Lesende, Flores y Carrizo</p>
+          <a
+            href="https://drive.google.com/file/d/1iAEXrjWkOuhwviwdKWrryVDrAHfWm5xo/view"
             target="_blank"
             class="btn btn-primary"
             >Ver trabajo</a
