--- a/pages/consumo.html
+++ b/pages/consumo.html
@@ -55,7 +55,10 @@
         >
           <div class="col-lg-8 align-self-end">
             <h1 class="text-white font-weight-bold">
-              Comunicación y culturas del consumo
+              Comunicación y culturas del consumo 
+            </h1>
+            <h1 class="text-white font-weight-bold">
+              Observatorio de Comunicación, Cultura y Sociedad
             </h1>
             <hr class="divider" />
           </div>
